[BISERVER-5310] Drop-down arrow sometimes not visible if in table within Internet Explorer. Made some changes to the way the table is layed out to correct the issue in IE.

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
@@ -784,6 +784,7 @@ body{
 
 .custom-list-textbox{
   border: none;
+  overflow:hidden;
 }
 
 .drop-popup{
@@ -967,9 +968,5 @@ td.datePickerMonth {
   overflow-y: scroll !important;
 }
 
-input[type=text]:focus,
-input[type=password]:focus {
-  outline: 0 none;
-}
 
 /* GWT Date Picker - END */
